Add new graphic pattern